# sisgesc

./: BUILD.md  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .env.example  .flake8  .gitignore  Dockerfile  Makefile  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 4dd912ad8611_adding_user_model.py
backend/app/: __init__.py  config.py  database.py  models.py
backend/app/user/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/: app.ts  database.py  main.py  server.ts
backend/src/config/: env.ts
backend/src/constants/: error-messages.ts  http-status-code.ts
backend/src/database/: app-data-source.ts  setup-test.ts
backend/src/database/entities/: Contact.ts  Enrollment.ts  Grade.ts  Guardian.ts  Role.ts  Shift.ts  Student.ts  Tuition.ts  User.ts
backend/src/database/migrations/: 1741042601338-InitialDatabase.ts  1741042613699-InitialRows.ts  1741451960359-AddCodeColumnToTheTuitionTable.ts
backend/src/hello/: router.py  service.py
backend/src/middlewares/: require-api-key.ts  require-jwt.ts
backend/src/routers/: auth.ts  enrollments.ts
backend/src/routers/handlers/auth/: signin.ts  signup.ts
backend/src/routers/handlers/enrollments/: create-enrollment.spec.ts  create-enrollment.ts
backend/src/utils/: date-validation.ts
backend/src/world/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_user_router.py
backend/tests/hello/: test_routes.py
frontend/: .gitignore  (+5 more)
(+5 files in other folders)
