[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matheus <matheusdejardim@gmail.com>"]
readme = "./README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.10.2"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "*"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
check_untyped_defs = true
namespace_packages = true
plugins = "sqlalchemy.ext.mypy.plugin"
pretty = true
show_error_context = true
exclude = ".venv"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "backoff.*",
  "opentracing.*",
]
ignore_missing_imports = true
